deploy/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: web-client/api
        resources:
          limits:
            memory: 1Gi
            cpu: 1
        ports:
        - containerPort: 8090
