deploy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    k8s-app: frontend
spec:
  selector:
    matchLabels:
      k8s-app: frontend
  template:
    metadata:
      labels:
        k8s-app: frontend
    spec:
      containers:
      - name: frontend
        image: web-client/frontend
        resources:
          limits:
            memory: 1Gi
            cpu: 1
        ports:
        - containerPort: 3000
