deploy/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    k8s-app: api
  type: ClusterIP
