deploy/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: frontend-svc
  name: frontend-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    k8s-app: frontend
  type: ClusterIP
